--- a/src/components/Form.module.css
+++ b/src/components/Form.module.css
@@ -1,8 +1,14 @@
 form {
-    margin-top: 30px;
+    margin: 30px auto;
 }
 
-form input{
-    display: block;
+input{
     margin-bottom: 20px;
+    font-size: 20px;
+}
+
+label {
+    display: block;
+    width: 100px;
+    margin: auto;
 }
